provisioning/buffer/kubernetes/templates/api/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: buffer-api
  namespace: $NAMESPACE
  labels:
    app: buffer-api
    releaseId: $RELEASE_ID
spec:
  replicas: $BUFFER_API_REPLICAS
  selector:
    matchLabels:
      app: buffer-api
  template:
    metadata:
      labels:
        app: buffer-api
        releaseId: $RELEASE_ID
        buffer-etcd-client: "true"
        tags.datadoghq.com/env: "$KEBOOLA_STACK"
        tags.datadoghq.com/service: "buffer-api"
        tags.datadoghq.com/version: "$RELEASE_ID"
      annotations:
        log: "true"
        ad.datadoghq.com/tags: '{"git.commit.sha": "$COMMIT_HASH", "git.repository_url": "https://github.com/keboola/keboola-as-code"}'
    spec:
      containers:
        - name: buffer-api
          image: $BUFFER_API_REPOSITORY:$BUFFER_API_IMAGE_TAG
          resources:
            requests:
              cpu: "200m"
              memory: "512Mi"
            limits:
              memory: "512Mi"
          ports:
            - containerPort: 8000
          startupProbe:
            httpGet:
              path: /health-check
              port: 8000
              httpHeaders:
                - name: Host
                  value: KubernetesStartupProbe
            initialDelaySeconds: 10
            periodSeconds: 1
            failureThreshold: 30
          readinessProbe:
            httpGet:
              path: /health-check
              port: 8000
              httpHeaders:
                - name: Host
                  value: KubernetesReadinessProbe
            periodSeconds: 10
            failureThreshold: 1
          livenessProbe:
            httpGet:
              path: /health-check
              port: 8000
              httpHeaders:
                - name: Host
                  value: KubernetesLivenessProbe
            periodSeconds: 10
            failureThreshold: 3
      tolerations:
        - key: app
          operator: Exists
          effect: NoSchedule
      nodeSelector:
        nodepool: main
